# repoform

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  repoform_config.yaml
.github/workflows/: docker-build-and-push.yml
repoform/: __init__.py  app.py  cli.py  config.py  loaders.py  repository.py  state.py  utils.py
scripts/: main.py
